# conductor-client-python

./: .gitignore  DEVELOPMENT.md  Dockerfile  README.md  build.sh  configure.ps1  configure.sh  publish.sh  setup.cfg  setup.py  version.sh
.github/workflows/: pull_request.yml
docs/: exceptions.md  metadata.md  task.md  testing.md  worker.md  workflow.md
docs/api/: conductor.client.automation.worker_host.md  conductor.client.automator.task_handler.md  conductor.client.worker.worker_abc.md  conductor.client.worker.worker_interface.md  conductor.client.workflow.conductor_workflow.md  conductor.client.workflow.executor.workflow_executor.md  conductor.client.workflow.executor.workflow_manager.md  conductor.client.workflow.workflow_builder.md
docs/authorization/: README.md
docs/exceptions/: README.md
docs/llm/: README.md
docs/metadata/: README.md
docs/schedule/: README.md
docs/secret/: README.md
docs/task/: README.md
docs/testing/: README.md
docs/worker/: README.md
docs/workflow/: README.md
openapi/: config.json  generate.sh
src/conductor/client/: authorization_client_abc.py  conductor_clients.py  metadata_client_abc.py  scheduler_client_abc.py  secret_client_abc.py  task_client_abc.py  workflow_client_abc.py
src/swift_conductor/: configuration.py
src/swift_conductor/automation/: task_handler.py  task_runner.py  worker_host.py  worker_process.py
src/swift_conductor/clients/: base_client.py  event_client.py  metadata_client.py  metadata_client_abc.py  task_client.py  task_client_abc.py  workflow_client.py  (+1 more)
tests/integration/: main.py
(+80 files in other folders)
